v8binding: Invoke 'beforeunload' event listeners even when paused

This patch fixes a regression at https://crrev.com/c/1215512 ,
which doesn't run 'beforeunload' event listeners when one of the
related execution contexts is paused.

This patch adds an exceptional handling for 'beforeunload' event
so that 'beforeunload' event listeners run regardless of pause.

Bug: 903297
Change-Id: I92bb24a8fd16ee9f81a5082f5c561c97c1dd5348
Reviewed-on: https://chromium-review.googlesource.com/c/1333548
Commit-Queue: Yuki Shiino <yukishiino@chromium.org>
Reviewed-by: Hitoshi Yoshida <peria@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609217}
Former-commit-id: 1a602b7b87adb930495bd95a17ab2771be7a60fd